<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Mbooster.my</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="register_sign_in">Register</string>
    <string name="currency">MYR&#160;</string>
    <string name="home">Home</string>
    <string name="purchase_history">Order History</string>
    <string name="shopping_bag">Shopping Bag</string>
    <string name="shopping_bag_kwave">KWave 3 Shopping Bag</string>
    <string name="mmspot">MMspot</string>
    <string name="account">My Account</string>
    <string name="button_redeem">Redeem</string>
    <string name="welcome">Welcome</string>
    <string name="mmspot_id_username">MMspot ID/Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="delivery_info">Delivery Information</string>
    <string name="search_mbooster">Search Mbooster</string>
    <string name="all_categories">All Categories</string>
    <string name="ca_telecommunication">Telecommunication</string>
    <string name="ca_electronic">Electronic Gadget</string>
    <string name="ca_fashion">Fashion</string>
    <string name="ca_travel">Travel</string>
    <string name="ca_homeappliances">Home Appliances</string>
    <string name="ca_outdoorssport">Outdoors &amp; Sport</string>
    <string name="ca_voucher">Voucher</string>
    <string name="ca_others">Others</string>
    <string name="you_have">You have</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email / MMspot ID</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="submit">Submit</string>
    <string name="mmspot_id">MMspot ID</string>
    <string name="address">Address</string>
    <string name="account_logout">Account Logout</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="logging_out">Logging Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_crop">Sorry–your device doesn’t support the crop action !</string>
    <string name="redemptionss">Redemption</string>
    <string name="check_out">Check Out</string>
    <string name="check_out_kwave">KWave 3 Check Out</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="grand_total_gst_incl">Grand Total(GST incl.):</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="online_banking">Online Banking</string>
    <string name="enter_mmspot_pw">Kindly enter your MMspot account password to proceed payment</string>
    <string name="mmspot_confirmation">MMspot Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="mmspot_password">MMspot Password</string>
    <string name="comming_soon">Coming soon</string>
    <string name="edit_shipping_address">&#160;&#160;Edit Shipping Address&#160;&#160;</string>
    <string name="unit_price">Unit Price</string>
    <string name="total">Total</string>
    <string name="shipping_fee">Shipping fee:&#160;</string>
    <string name="purchase_detail">Purchase Detail</string>
    <string name="payment_nsuccessful">Payment\nSuccessful</string>
    <string name="product">Product</string>
    <string name="redemption_page">Redemption Page</string>
    <string name="confirm_redemption">Confirm Redemption</string>
    <string name="in_stock">In stock</string>
    <string name="key_features">Key Features</string>
    <string name="product_description">Product Description</string>
    <string name="buy_now">BUY NOW</string>
    <string name="redeem_now">REDEEM NOW</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="shipping_free_n">Shipping Free \n</string>
    <string name="nationwide_n">Nationwide \n</string>
    <string name="good_sold_are_n_not_refundable">Good sold are\nnot refundable</string>
    <string name="qty">Quantity</string>
    <string name="color">Color</string>
    <string name="redeem_by">Redeem By</string>
    <string name="there_is_no_availalbe_stock">There is no available stock for this product now.</string>
    <string name="invalid_qty">Invalid Quantity</string>
    <string name="original_price">Original Price:&#160;</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="search">Search</string>
    <string name="no_purchase_transaction_record_found">No purchase transaction record found</string>
    <string name="order_processing">\u0020\u0020Processing\u0020\u0020</string>
    <string name="order_shipped">\u0020\u0020Order Shipped\u0020\u0020</string>
    <string name="order_completed">\u0020\u0020Order Completed\u0020\u0020</string>
    <string name="summary">Summary</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="update">Update</string>
    <string name="please_fill_in_all_blanks">Please fill in all blanks</string>
    <string name="request_an_item">Request An Item</string>
    <string name="request_item">Request Item</string>
    <string name="redemption">Redemption</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="price_range">Price Range</string>
    <string name="item_image">Item Image</string>
    <string name="please_upload_an_image">Please upload a image</string>
    <string name="request_this_item_q">Request this item?</string>
    <string name="select_file">Select File</string>
    <string name="request_history">Request History</string>
    <string name="oops_no_item_requested_yet">Oops, no item requested yet.</string>
    <string name="pending">Pending</string>
    <string name="pending_verify">Click to Verify</string>
    <string name="verified">Verified</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="oops_there_is_nothing_in_your_shopping_bag">Oops, there is nothing in your shopping bag.</string>
    <string name="handling_amp_transaction_fee"><![CDATA[Total Handling & Shipping Charges]]></string>
    <string name="are_you_sure_to_checkout">Are you sure to check out?</string>
    <string name="are_you_sure_to_redeem">Are you sure to redeem?</string>
    <string name="invalid_mairtime">Invalid M-A. Please reload to proceed payment.</string>
    <string name="you_have_reach_stock_limit">You have reach the stock limit</string>
    <string name="not_updated">Not updated. Please try again</string>
    <string name="are_you_sure_to_delete_this_item">Are you sure to delete this item?</string>
    <string name="category">Category</string>
    <string name="title_redemption">Product Redemption</string>
    <string name="handling_amp_shipping_charges"><![CDATA[HANDLING & SHIPPING CHARGES :]]></string>
    <string name="subtotal">SUBTOTAL :</string>
    <string name="courier_service">Courier Company:</string>
    <string name="tracking_code">Tracking Code:</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="product_coming_soon">Product Coming Soon</string>
    <string name="alternative_number">Alternative Number</string>
    <string name="first_time_login">First Time Login</string>
    <string name="billing_address">Billing Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="same_as_shipping_address">Same as shipping address</string>
    <string name="my_profile">My Profile</string>
    <string name="my_address">My Address</string>
    <string name="edit">Edit</string>
    <string name="edit_billing_address" translatable="false">Edit Billing Address</string>
    <string name="exit_application">Exit Application</string>
    <string name="order_refunds">\u0020\u0020Order Refunds\u0020\u0020</string>
    <string name="order_cancel2">\u0020\u0020Order Cancel\u0020\u0020</string>
    <string name="billing_details">Billing Details</string>
    <string name="product_specification">Product Specification</string>
    <string name="whats_in_the_box">What\'s in the box</string>
    <string name="warranty">Warranty</string>
    <string name="change_english">Change Language to Chinese</string>
    <string name="order_process">\u0020\u0020Order Processing\u0020\u0020</string>
    <string name="invoice_id">Invoice ID</string>
    <string name="order_id">Order Id :</string>
    <string name="no_network_notification">Network currently not available. Please try again later</string>
    <string name="try_again">Try Again</string>
    <string name="exit">Exit</string>
    <string name="login_apps">If you don\'t have an MMspot account, click here to download the app and sign up now!  MMspot link: http://mmspot.com/</string>
    <string name="voucher">e-Voucher</string>
    <string name="enter_voucher">Please enter your Mbooster voucher code</string>
    <string name="enter_voucher_to_submit">Enter voucher code to submit.</string>
    <string name="total_voucher_amount">Total e-Voucher Value</string>
    <string name="total_voucher_discount">Total voucher discount:</string>
    <string name="remove">Remove</string>
    <string name="voucher_used">Voucher Used</string>
    <string name="voucher_tips_text1">It\'s time to use your Mbooster voucher!</string>
    <string name="voucher_tips_text2">Hi, your Mbooster voucher redemption is coming, or you have a voucher about to expire. Please redeem your voucher here before it expiry:)</string>
    <string name="you_have_not_entered_any_voucher">You have not entered any voucher</string>
    <string name="mbooster_voucher_code">Mbooster Voucher Code</string>
    <string name="total_voucher_value">Total e-Voucher Value</string>
    <string name="paid">Total paid amount:</string>
    <string name="pay_now">Pay Now</string>
    <string name="mbooster_voucher_entitlement">Mbooster Voucher Entitlement: RM 10 x 2</string>
    <string name="permission_denied">Permissions denied.</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_and_contact_us"><![CDATA[Help & Contact Us]]></string>
    <string name="happening">Happening</string>
    <string name="hello">Hello!</string>
    <string name="we_re_always_here_to_help_you">We’re always here to help you.</string>
    <string name="customer_care_line">Customer Care line</string>
    <string name="monday_friday_except_public_holiday">Monday - Friday (Except Public Holiday)</string>
    <string name="you_can_also_email_us_at">You can also email us at</string>
    <string name="no_record_found">No Record Found</string>
    <string name="no_product_found">No Product Found</string>
    <string name="ends_in">ENDS IN:</string>
    <string name="days">DAYS</string>
    <string name="hrs">HRS</string>
    <string name="min">MIN</string>
    <string name="sec">SEC</string>
    <string name="start_in">START IN:</string>
    <string name="set">Set</string>
    <string name="view_all">View All</string>
    <string name="lion_dance_booking">Lion Dance Booking</string>
    <string name="total_mairtime">Total M-A</string>
    <string name="total_myr">Total MYR</string>
</resources>