<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.app.mbooster.activity_folder.ContactUs"
    tools:ignore="MissingPrefix">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/help_and_contact_us"
                android:textColor="@color/colorbutton"
                android:textSize="20dp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/helpandcontactus" />

    <TextView
        android:id="@+id/textView"

        fontPath="fonts/gotham_book_bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/hello"
        android:textColor="@color/colorbutton"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView2"
        fontPath="fonts/gotham_book_bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/we_re_always_here_to_help_you"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_care_line"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView9"
                fontPath="fonts/gotham_book_bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView8"
                android:layout_toEndOf="@+id/textView8"
                android:text=" +6011-51001122"
                android:textColor="@android:color/black"
                android:textSize="16dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/monday_friday_except_public_holiday"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView11"
            fontPath="fonts/gotham_book_bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="9.00am - 6.00pm"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/you_can_also_email_us_at"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView13"
            fontPath="fonts/gotham_book_bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="enquiry@mbooster.my"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16dp" />
    </LinearLayout>

</RelativeLayout>
